@@ -36,7 +36,7 @@ typedef struct {
 	int threadID;
 } ThreadIndexData;
 
-void FindMatches(int, char*, char*, char*, char*, char*, int, int, int, int, int, int, int, int, int, int, int, int, int, char*, char*, char*, int);
+void FindMatches(int, char*, char*, char*, char*, char*, int, int, int, int, int, int, int, int, int, int, int, int, int, int, char*, char*, char*, int);
 int FindMatchesInIndexes(char **rgIndexFileNames,
 		int binaryInput,
 		RGBinary *rg,
@@ -49,6 +49,7 @@ int FindMatchesInIndexes(char **rgIndexFileNames,
 		int numDeletions,
 		int numGapInsertions,
 		int numGapDeletions,
+		int keySize,
 		int maxKeyMatches,
 		int maxNumMatches,
 		int whichStrand,
@@ -75,6 +76,7 @@ int FindMatchesInIndex(char *indexFileName,
 		int numDeletions,
 		int numGapInsertions,
 		int numGapDeletions,
+		int keySize,
 		int maxKeyMatches,
 		int maxNumMatches,
 		int whichStrand,
