@@ -30,6 +30,7 @@ bmatches
 \#	[\fB\-y\fR \fIINTEGER\fR] 	[\fB\-\-numInsertions=\fIINTEGER\fR]
 \#	[\fB\-Z\fR \fIINTEGER\fR] 	[\fB\-\-numGapDeletions=\fIINTEGER\fR]
 \#	[\fB\-Y\fR \fIINTEGER\fR] 	[\fB\-\-numGapInsertions=\fIINTEGER\fR]
+	[\fB\-k\fR \fIINTEGER\fR]	[\fB\-\-keySize=\fIINTEGER\fR]
 	[\fB\-K\fR \fIINTEGER\fR]	[\fB\-\-maxKeyMatches=\fIINTEGER\fR]
 	[\fB\-M\fR \fIINTEGER\fR]	[\fB\-\-maxNumMatches=\fIINTEGER\fR]
 	[\fB\-w\fR \fIINTEGER\fR]	[\fB\-\-whichStrand=\fIINTEGER\fR]
